# DAPARS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all_tests.sh  cloc_output.txt  count_lines.sh  execute_all_tests.sh  regenerate_all_tests.sh  store_version_dacomp.sh
Common/: CMakeLists.txt
Common/src/include/: ASTNodeCreation.hpp  BaseParser.hpp  PolicyDebugLog.hpp  Tokenizer.hpp
Common/src/lib/: BaseParser.cpp  CMakeLists.txt  Tokenizer.cpp
Common/src/lib/grammars/: grammar_control_flow.cpp  grammar_dalang.cpp  grammar_dragon_4_55.cpp  grammar_expr.cpp  grammar_expr_simple.cpp  grammar_pars.cpp
DACOMPILER/doc/: IR.txt  spec.txt
DACOMPILER/doc/BE/: ABI.txt
DACOMPILER/doc/Discarded/: tests.txt
DACOMPILER/src/include/: Class.hpp  CompilationUnit.hpp  Function.hpp  Symbol.hpp  SymbolTable.hpp  TreeDecoration.hpp  Types.hpp
DACOMPILER/src/include/AST/: ASTNodeCreation.hpp  ASTVisitor.hpp  Node.hpp  NodeExpr.hpp
DACOMPILER/src/include/ASTVisitors/: DeferredNodesCreation.hpp  Dump.hpp  FullTraversal.hpp  LexicalScopeOfNode.hpp  LocalVarOffsets.hpp  LvalRval.hpp  PrettyPrinter.hpp  ResolveMemberTypes.hpp  Scopes.hpp  (+5 more)
DACOMPILER/src/lib/: CMakeLists.txt  Node.cpp  main.cpp  parser.y
DAVM/: execute_tests.sh  regenerate_tests.sh
DAVM/doc/: IR_definition.txt  tests_description.txt  vm_specs.txt
DAVM/src/include/: BasicTypes.hpp  ByteCode.hpp  ErrorLog.hpp  ExecutionContext.hpp  IRBuilder.hpp  IRCodification.hpp  IRDefinition.hpp  IRPrint.hpp  MMU.hpp  Memory.hpp  Process.hpp  RegisterBank.hpp  Utils.hpp  VM.hpp  VMBasicTypes.hpp  VMSpec.hpp
DAVM/src/lib/: CMakeLists.txt  IRBuilder.cpp  IRCodification.cpp  IRPrint.cpp  Process.cpp  Utils.cpp  VM.cpp  VM_instructions_implementation.cpp
DAVM/src/lib/VM/ByteCode/: IRBuilder.cpp  IRCodification.cpp  IRPrint.cpp  Utils.cpp
DAVM/src/lib/VM/Execution/: Process.cpp  VM.cpp  VM_instructions_implementation.cpp
DAVM/src/tests/: CMakeLists.txt  davm.cpp  main.cpp  test1.cpp  test2.cpp  test3.cpp  test_arith.cpp  test_call.cpp  test_error_mem.cpp  test_loadi.cpp  test_logic.cpp  test_mem.cpp  test_stack.cpp  unit_test.cpp
DAVM/src/tests/verification/: CMakeLists.txt  test1.bc.out.ver  test1.ver  test2.bc.out.ver  test2.ver  test3.bc.out.ver  test3.ver  test_call.ver  test_comparisons.ver  test_error_mem.ver  test_loadi.ver  test_logic.ver  test_mem.ver  test_stack.ver
GrammarAnalysis/: CMakeLists.txt  clean_install.sh  execute_tests.sh  regenerate_tests.sh
GrammarAnalysis/doc/: grammar.txt  todo.txt
GrammarAnalysis/src/include/: Action.hpp  Grammar.hpp  GrammarLALR.hpp  GrammarLR1.hpp  GrammarUtils.hpp  Identifiers.hpp  LR0_Item.hpp  LR1_Item.hpp  LR_Tables.hpp  Output.hpp  Rule.hpp  Symbol.hpp
GrammarAnalysis/src/lib/: CMakeLists.txt  Grammar.cpp  GrammarLALR.cpp  GrammarLR1.cpp  GrammarUtils.cpp  LR1_Item.cpp  Output.cpp  Rule.cpp  Symbol.cpp
GrammarAnalysis/src/tests/: CMakeLists.txt  generate_grammar_strings.cpp
GrammarAnalysis/src/tests/verification/: CMakeLists.txt
LALR/: CMakeLists.txt  clean_install.sh  execute_tests.sh  regenerate_tests.sh
LALR/doc/: todo.txt
LALR/src/include/: ParserLALR.hpp
LALR/src/lib/: CMakeLists.txt  ParserLALR.cpp
LALR/src/tests/: CMakeLists.txt  grammar_pars.cpp  test_grammar_lalr.cpp
LALR/src/tests/verification/: CMakeLists.txt  test_grammar_lalr.ver
LR1/: CMakeLists.txt  README.txt  clean_install.sh  execute_tests.sh  regenerate_tests.sh
LR1/doc/: tests.txt  todo.txt
LR1/src/include/: Parser.hpp  ParserLR1.hpp  Tokenizer.hpp
LR1/src/lib/: CMakeLists.txt  Parser.cpp  ParserLR1.cpp  Tokenizer.cpp
LR1/src/tests/: CMakeLists.txt  grammar_pars.cpp  test_grammar_dragon_lr1.cpp  test_grammar_lr1.cpp  test_parse_g1.cpp  test_parse_strings.cpp  unit_items.cpp
LR1/src/tests/verification/: CMakeLists.txt  g1.ver  g1_2.ver  test_grammar_dragon_lr1.ver  test_grammar_lr1.ver  unit_items.ver
RecDescent/: CMakeLists.txt  clean_install.sh  execute_tests.sh  regenerate_tests.sh
RecDescent/doc/: error_list.txt  error_recovery_strategies.txt  grammar.txt  halting_strategy.txt  parsing_made_dirty.txt  sdd_l_att_node.txt  testing_infrastructure.txt  todo.txt
RecDescent/src/include/: Parser.hpp  ParserLL1RecDesc.hpp  ParserLL1RecDescSourceHeaders.hpp  Tokenizer.hpp
RecDescent/src/lib/: CMakeLists.txt  LL1RecDescClass.cpp  LL1RecDescControlFlow.cpp  LL1RecDescDeclarations.cpp  LL1RecDescExpressions.cpp  LL1RecDescFunction.cpp  LL1RecDescName.cpp  LL1RecDescTopLevel.cpp  Parser.cpp  ParserGrammar.cpp  ParserLL1RecDesc.cpp  Tokenizer.cpp
RecDescent/src/tests/: CMakeLists.txt  test_backend_davm.cpp  test_code_generator.cpp  test_dapars_davm.cpp  test_errors_parser.cpp  test_grammar.cpp  test_grammar2.cpp  test_grammar_dalang.cpp  test_ir_generator.cpp  test_parser.cpp  test_parser_compiler.cpp  test_parser_compiler_davm.cpp  test_regex.cpp
RecDescent/src/tests/verification/: CMakeLists.txt  test_backend_davm.ver  test_code_generator.ver  test_errors_parser.ver  test_grammar.ver  test_grammar2.ver  test_grammar_dalang.ver  test_ir_generator.ver  test_parse1.input  test_parse1.ver  test_parse2.input  test_parse2.ver  test_parse3.input  test_parse3.ver  test_parse4.input  test_parse4.ver  test_parser.ver
RecDescent/src/tests/verification_davm/: CMakeLists.txt  error_stack_overflow.comp.ver  error_stack_overflow.lang  error_stack_overflow.vm.ver  functions.comp.ver  functions.lang  functions.vm.ver  lang_args.comp.ver  lang_args.lang  lang_args.vm.ver  lang_args_offsets.comp.ver  lang_args_offsets.lang  lang_args_offsets.vm.ver  lang_if.comp.ver  lang_if.lang  lang_if.vm.ver  lang_internal_test.comp.ver  lang_internal_test.lang  lang_internal_test.vm.ver  lang_internal_test_false.comp.ver  lang_internal_test_false.lang  lang_internal_test_false.vm.ver  lang_member.comp.ver  lang_member.lang  lang_member.vm.ver  lang_pointers.comp.ver  lang_pointers.lang  lang_pointers.vm.ver  lang_pointers_stack.comp.ver  lang_pointers_stack.lang  lang_pointers_stack.vm.ver  lang_while.comp.ver  lang_while.lang  lang_while.vm.ver
install/tests/: test_grammar  test_regex
(+68 files in other folders)
